[tool.poetry]
name = "telegram-store"
version = "0.1.0"
description = ""
authors = ["ilyashirko <ilyashirko@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_store"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
environs = "^9.5.0"
python-telegram-bot = "^13.15"
redis = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
